@@ -25,7 +25,7 @@ AC_SUBST(LIBRSVG_MAJOR_VERSION)
 AC_SUBST(LIBRSVG_MINOR_VERSION)
 AC_SUBST(LIBRSVG_MICRO_VERSION)
 
-LIBRSVG_VERSION=$LIBRSVG_MAJOR_VERSION:$LIBRSVG_MINOR_VERSION:$LIBRSVG_MICRO_VERSION
+LIBRSVG_VERSION=$LIBRSVG_MAJOR_VERSION.$LIBRSVG_MINOR_VERSION.$LIBRSVG_MICRO_VERSION
 
 VERSION_INFO=`expr $LIBRSVG_MAJOR_VERSION + $LIBRSVG_MINOR_VERSION`:$LIBRSVG_MICRO_VERSION:$LIBRSVG_MINOR_VERSION
 AC_SUBST(VERSION_INFO)
